[package]
name = "sampler"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
clap-verbosity-flag = "2"

crossbeam = "0.8"
anyhow = "1"
itertools = "0.10"

rodio = "0.16"
cpal = "0.14"
# tts = "0.24"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

rumqttc = "0.14"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

env_logger = "0.9"
log = "0.4"

[profile.release]
debug = true
